Bezier Chain
Took 2 hours 47 minutes